--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,16 +21,16 @@ jobs:
       - name: 📦 Instalar dependências
         run: npm ci
 
-      - name: 🧪 Executar testes
-        run: npm test -- --watchAll=false --passWithNoTests
+      - name: 🧪 Executar testes (se existir)
+        run: npm run test --if-present
 
-      - name: 🏗️ Fazer build
+      - name: 🔍 Executar ESLint
+        run: npm run lint
+
+      - name: 🏗️ Fazer build de produção
         run: npm run build
         env:
-          CI: false  # Importante para Vite
+          CI: false
 
-      - name: 📊 Coverage (opcional)
-        run: |
-          if [ -f "coverage/lcov.info" ]; then
-            npx coverage-badge > coverage/badge.svg
-          fi
+      - name: 🔥 Testar build (opcional)
+        run: npm run preview -- --port 4173 & sleep 5 && curl -f http://localhost:4173 || exit 0
