--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo '✅ Testes não configurados - pulando...' && exit 0"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
