test: subindo o destination de redefinição de senha

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "rewrites": [
     {
       "source": "/redefinePassword",
-      "destination": "/index.html"
+      "destination": "./src/pages/RedefinePassword/index.jsx"
     },
     {
       "source": "/home",
